# PolyArch-Loom-Fabric.ops-RTL-Gen

./: .gitignore  Fabric Reconfigurable Ops.md  README.md  demo.sh  demo_barrel_shift.sh  demo_bitwise_alu.sh  demo_div_rem_signed.sh  demo_div_rem_unsigned.sh  demo_min_max_signed.sh  registry.yaml
demos/: _demo_lib.sh  demo.sh  demo_approx_tanh_erf.sh  demo_barrel_shift.sh  demo_bitwise_alu.sh  demo_cordic_hyp.sh  demo_cordic_trig.sh  demo_div_rem_signed.sh  demo_div_rem_unsigned.sh  demo_exp_series.sh  demo_fp_add_sub.sh  demo_fp_div_rem.sh  demo_fp_min_max.sh  demo_fp_to_int.sh  demo_int_to_fp.sh  demo_log_core.sh  demo_min_max_signed.sh  demo_min_max_unsigned.sh  demo_rounding.sh  demo_sqrt_rsqrt.sh
docs/: fabric_hardware_share_groups.md  fabric_reconfigurable_ops.md  loom-rtl-reference.md
docs/plans/: 2026-06-01-fabric-gen-and-fu-add-sub.md  (+18 more)
generator/: pyproject.toml
generator/fabric_gen/: __init__.py  __main__.py  approx.py  errors.py  formats.py  generator.py  parser.py  registry.py  sharegroups.py
generator/templates/: fu_add_sub.sv.j2  fu_approx_tanh_erf.sv.j2  fu_barrel_shift.sv.j2  fu_bitwise_alu.sv.j2  fu_cordic_hyp.sv.j2  fu_cordic_trig.sv.j2  fu_div_rem_signed.sv.j2  fu_div_rem_unsigned.sv.j2  fu_exp_series.sv.j2  fu_fp_add_sub.sv.j2  fu_fp_div_rem.sv.j2  fu_fp_min_max.sv.j2  fu_fp_to_int.sv.j2  fu_int_to_fp.sv.j2  fu_log_core.sv.j2  fu_min_max_signed.sv.j2  fu_min_max_unsigned.sv.j2  fu_rounding.sv.j2  fu_sqrt_rsqrt.sv.j2
scripts/: verify_formats.sh
tests/: conftest.py  test_generator.py  test_parser.py  test_sharegroups.py
(+60 files in other folders)
